--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="right_panel">
 			<div id="about">
 				<div>Hello, <br><br>
-					I am a Java UI developer looking to get involved more in the beautiful field of User Experience
+					I am a Java UI developer and a part time UX designer, looking to get more involved in the beautiful field of User Experience
 					Design.
 				</div>
 				<div>I currently live in <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj
@@ -50,17 +50,17 @@
 					and interest most of the companies show for the UX domain, really motivates me to make a change.
 				</div>
 				<div>I am surrounded by smart individuals with passion for technology and it is sometimes painful to
-					hear users complain about poor user experiences with the products we develop.
+					hear users complain about poor experiences with the products we develop.
 					I really think we can do more to earn the respect and appreciation of our users, and more than that,
 					make technology less scary for non technical people.
 				</div>
 				<div>Personally, I envision a future where everybody uses technology to make their lives less
-					complicated and more enjoyable, and I will proudly look back twenty years from now, thinking that I
+					complicated and more enjoyable and I will proudly look back twenty years from now, thinking that I
 					had a part in all this.
 				</div>
 				<div>I picked up the interest in design while attending a UI/UX seminar back in 2011. I was then
 					working for a company that produces software for the financial industry.
-					They brought in a <a href="http://www.didi.com/">design expert</a> from the United States to teach a class about user-centered design.
+					They brought in a <a href="http://www.didi.com/">design expert</a> from US to teach a class about user-centered design.
 					Since then, I have been working on complex and interesting user interfaces for both financial and
 					bio informatics industries.
 				</div>
