less commas and education update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="right_panel">
 			<div id="about">
 				<div>Hello, <br><br>
-					I am a Java UI developer and a part time UX designer, looking to get more involved in the beautiful field of User Experience
+					I am a Java UI developer and part time UX designer, looking to get more involved in the beautiful field of User Experience
 					Design.
 				</div>
 				<div>I currently live in <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj
