analysis summary draft and thumbnails

--- a/projects.html
+++ b/projects.html
@@ -163,7 +163,7 @@
 				<div class="project">
 					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
 						<a  class="bottom"href="pvalue.html">
-							<img src="img/network_highlight/thumbnail21.png"/>
+							<img src="img/pvalue_chart/thumbnail2.png"/>
 						</a>
 						<div class="overlay">
 							<div class="overlay_inner">
@@ -175,6 +175,23 @@
 						</div>
 					</div>
 					<div class="project_title">P Value chart</div>
+				</div>
+
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="analysis_summary.html">
+							<img src="img/analysis_summary/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">DATA VISUALIZATION</div>
+									<div class="topic">VISUAL DESIGN</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Biological Dashboard Refresh</div>
 				</div>
 
 			</div>
