started to write content for the analysis summary article

--- a/analysis_summary.html
+++ b/analysis_summary.html
@@ -82,15 +82,39 @@
 
 				<h2>PROBLEM TO SOLVE</h2>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>This is a small part of a complex bioinformatics application that displays large amounts of data in
+                    the user interface.</p>
+
+                <p>In an effort to reduce the waiting time for users, the whole process of loading a biological
+                    analysis was rethought.
+                    This involved reconstructing of the analysis summary page to fit the new data acquisition
+                    process.</p>
+
+                <p>Even though there were no specific requirements to change the look and feel of the new
+                    implementation,
+                    I saw this as an opportunity and a challenge to improve it by doing small changes that wouldn't
+                    affect the users already familiar with the dashboard.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="analysis_summary" title="BLA BLA" href="img/analysis_summary/before.png"><img class="gallery1" id="before" src="img/analysis_summary/before.png" alt="" /></a>
+                    <a class="fancybox" rel="analysis_summary" title="This is how the summary looked before the redesign. There were improvements to be made to the visual separation of the sections, information hierarchy and data visualization." href="img/analysis_summary/before.png"><img class="gallery1" id="before" src="img/analysis_summary/before.png" alt="" /></a>
                 </div>
 
                 <h2>THE SOLUTION</h2>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>The main goal was to improve the readability of the page so that the users would get a quicker and better understanding of the information presented to them.</p>
+
+                <p>
+                    <ul class="article_list">
+                        <li>A better separation of the sections by using solid color headers instead of the fading gradient and a drop shadow effect</li>
+                        <li>Less intrusive expand/collapse icons</li>
+                        <li>Moved the icons from right to left, for consistency reasons and because personally, I found them confusing</li>
+                        <li>Added some indent to the content of each section also to enforce the information hierarchy</li>
+                        <li>Dimmed the black horizontal separators so that they don’t break the  visual hierarchy</li>
+                        <li>improved export buttons</li>
+                        <li>improved display of the p-values</li>
+                        <li>improved display of the p-values</li>
+                    </ul>
+                </p>
 
                 <div class="gallery">
                     <a class="fancybox" rel="analysis_summary" title="BLA BLA" href="img/analysis_summary/after.png"><img class="gallery1" id="after" src="img/analysis_summary/after.png" alt="" /></a>
