finalized the analysis summary article

--- a/analysis_summary.html
+++ b/analysis_summary.html
@@ -103,16 +103,15 @@
 
                 <p>The main goal was to improve the readability of the page so that the users would get a quicker and better understanding of the information presented to them.</p>
 
-                <p>
+                <p>I broke this down into a list of small improvements:
                     <ul class="article_list">
                         <li>A better separation of the sections by using solid color headers instead of the fading gradient and a drop shadow effect</li>
-                        <li>Less intrusive expand/collapse icons</li>
-                        <li>Moved the icons from right to left, for consistency reasons and because personally, I found them confusing</li>
-                        <li>Added some indent to the content of each section also to enforce the information hierarchy</li>
+                        <li>Less intrusive and better placed expand/collapse icons</li>
+                        <li>Added some indent to the content of each section to enforce the information hierarchy</li>
                         <li>Dimmed the black horizontal separators so that they don’t break the  visual hierarchy</li>
                         <li>improved export buttons</li>
-                        <li>improved display of the p-values</li>
-                        <li>improved display of the p-values</li>
+                        <li>improved name and display of overlap column</li>
+                        <li>improved display of the p-values and p-value ranges</li>
                     </ul>
                 </p>
 
@@ -122,8 +121,15 @@
 
                 <h2>CONCLUSION</h2>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>I consider this little project a success because I was able to improve the usability of the dashboard with minor changes to the look and feel.
+                    The design was also relatively easy to implement.</p>
 
+                <p>I got mostly positive feedback from the people seeing the improved dashboard for the first time and some of the beta testers were kind enough to provide written feedback:</p>
+
+                <p class="pullquote-wide">"This is a really nice page that can make more sense of the results. Like the distribution and the more detailed info for the ratio/overlap."</p>
+                <p class="pullquote-wide">"Everything looks great on my mac OSX10.9.3. I launched from the Beta installer. I love the sleeker look of the New Summary."</p>
+
+                <p>The most challenging part of the project was the p-value chart and it is covered in depth in another article since it is a novel visualization and it's conception is an interesting story itself.</p>
 
 			</div>
 		</div>
