analysis summary, changed the subtitle of a photo

--- a/analysis_summary.html
+++ b/analysis_summary.html
@@ -116,7 +116,7 @@
                 </p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="analysis_summary" title="BLA BLA" href="img/analysis_summary/after.png"><img class="gallery1" id="after" src="img/analysis_summary/after.png" alt="" /></a>
+                    <a class="fancybox" rel="analysis_summary" title="After the design refresh, the page has a sleeker look and allows easier understanding of the information." href="img/analysis_summary/after.png"><img class="gallery1" id="after" src="img/analysis_summary/after.png" alt="" /></a>
                 </div>
 
                 <h2>CONCLUSION</h2>
