first part of the content for the p value chart article

--- a/analysis_summary.html
+++ b/analysis_summary.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width">
 		<meta charset="utf-8"/>
 
-		<title>BIOLOGICAL ANALYSIS DASHBOARD - DESIGN REFRESH</title>
+		<title>Biological Analysis Dashboard - Design Refresh</title>
 
 		<!-- Add jQuery library -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
