--- a/pvalue.html
+++ b/pvalue.html
@@ -88,7 +88,7 @@
                 <p>There are actually two types of columns, one with single values and one with ranges of multiple values, represented by the start and end points of the interval.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="problem" title="BLA BLA" href="img/pvalue_chart/before.png"><img class="gallery1center" id="before1" src="img/pvalue_chart/before.png" alt="" /></a>
+                    <a class="fancybox" rel="problem" title="The original display of the information" href="img/pvalue_chart/before.png"><img class="gallery1center" id="before1" src="img/pvalue_chart/before.png" alt="" /></a>
                 </div>
 
                 <p>The goals were to:
@@ -113,7 +113,7 @@
                     There are actually three levels of significance used in practice : 0.05, 0.01 and 0.001.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="theory" title="BLA BLA" href="img/pvalue_chart/1.png"><img class="gallery1center" id="theory_1" src="img/pvalue_chart/1.png" alt="" /></a>
+                    <a class="fancybox" rel="theory" title="Gaussian distribution of the probabilities with significance levels of the p value" href="img/pvalue_chart/1.png"><img class="gallery1center" id="theory_1" src="img/pvalue_chart/1.png" alt="" /></a>
                 </div>
 
                 <p>Starting from this graphical representation that is used in all the literature and probably familiar to most users, I began to get rid of the chart junk and keep only the essential information.</p>
@@ -121,20 +121,20 @@
                 <p>Given that the chart is symmetrical, I only kept the right side. I chose the right side because the importance of the values grows from left to right and thus made use of a commonly known convention.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="theory" title="BLA BLA" href="img/pvalue_chart/2.png"><img class="gallery1center" id="theory_2" src="img/pvalue_chart/2.png" alt="" /></a>
+                    <a class="fancybox" rel="theory" title="Right side of the symmetrical visualization" href="img/pvalue_chart/2.png"><img class="gallery1center" id="theory_2" src="img/pvalue_chart/2.png" alt="" /></a>
                 </div>
 
                 <p>The next step was to reduce it to a one dimensional representation since the values can be placed on a single axis.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="theory" title="BLA BLA" href="img/pvalue_chart/3.png"><img class="gallery1center" id="theory_3" src="img/pvalue_chart/3.png" alt="" /></a>
+                    <a class="fancybox" rel="theory" title="Single line with significance markers" href="img/pvalue_chart/3.png"><img class="gallery1center" id="theory_3" src="img/pvalue_chart/3.png" alt="" /></a>
                 </div>
 
                 <p>So good so far, but this line could not accommodate a wide range of values and also fit into a 100 pixel wide area. In order to fix this, I used a nonlinear scale, a logarithmic scale.
                 The idea came actually after consulting with one of the scientists from the office that helped me understand the whole p-value concept.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="theory" title="BLA BLA" href="img/pvalue_chart/4.png"><img class="gallery1center" id="theory_4" src="img/pvalue_chart/4.png" alt="" /></a>
+                    <a class="fancybox" rel="theory" title="Nonlinear scale with significance markers" href="img/pvalue_chart/4.png"><img class="gallery1center" id="theory_4" src="img/pvalue_chart/4.png" alt="" /></a>
                 </div>
 
                 <p>Even by using a logarithmic scale, the interval is limited to the right side. I chose 1E-10 as a small enough value, considering that smaller values don't need comparing.</p>
@@ -148,24 +148,24 @@
                     scale in order to make the values stand out and tested with values inside the range, as well as outside the range.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="firstProposal" title="BLA BLA" href="img/pvalue_chart/5.png"><img class="gallery1center" id="firstProposal_1" src="img/pvalue_chart/5.png" alt="" /></a>
+                    <a class="fancybox" rel="firstProposal" title="Experimenting with different p values" href="img/pvalue_chart/5.png"><img class="gallery1center" id="firstProposal_1" src="img/pvalue_chart/5.png" alt="" /></a>
                 </div>
 
                 <p>This is how the very first visualization looked like, for both singular and interval values:</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="firstProposal" title="BLA BLA" href="img/pvalue_chart/6.png"><img class="gallery1center" id="firstProposal_2" src="img/pvalue_chart/6.png" alt="" /></a>
+                    <a class="fancybox" rel="firstProposal" title="First proposal" href="img/pvalue_chart/6.png"><img class="gallery1center" id="firstProposal_2" src="img/pvalue_chart/6.png" alt="" /></a>
                 </div>
 
                 <p>Most of the goals were reached, except the significance levels were sometimes covered by the values.
                     I fixed this by moving the markers outside the line and increasing the contrast by using orange.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="firstProposal" title="BLA BLA" href="img/pvalue_chart/7.png"><img class="gallery1center" id="firstProposal_3" src="img/pvalue_chart/7.png" alt="" /></a>
+                    <a class="fancybox" rel="firstProposal" title="Moving the markers outside of the line" href="img/pvalue_chart/7.png"><img class="gallery1center" id="firstProposal_3" src="img/pvalue_chart/7.png" alt="" /></a>
                 </div>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="firstProposal" title="BLA BLA" href="img/pvalue_chart/8.png"><img class="gallery1center" id="firstProposal_4" src="img/pvalue_chart/8.png" alt="" /></a>
+                    <a class="fancybox" rel="firstProposal" title="Moving the markers outside of the line" href="img/pvalue_chart/8.png"><img class="gallery1center" id="firstProposal_4" src="img/pvalue_chart/8.png" alt="" /></a>
                 </div>
 
                 <p>The one thing I was not happy about wast that there was no indication that the scale is not linear and
@@ -180,7 +180,7 @@
                 <p>I decided to use different intensities of red and green instead:</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="firstProposal" title="BLA BLA" href="img/pvalue_chart/9.png"><img class="gallery1center" id="firstProposal_5" src="img/pvalue_chart/9.png" alt="" /></a>
+                    <a class="fancybox" rel="firstProposal" title="Color coding for good and bad values" href="img/pvalue_chart/9.png"><img class="gallery1center" id="firstProposal_5" src="img/pvalue_chart/9.png" alt="" /></a>
                 </div>
 
                 <p>This was the point where all the goals were achieved but there was an inconvenience.
@@ -188,7 +188,7 @@
                     so I had to calm it down a bit by using different shades of grey instead.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="firstProposal" title="BLA BLA" href="img/pvalue_chart/10.png"><img class="gallery1center" id="firstProposal_6" src="img/pvalue_chart/10.png" alt="" /></a>
+                    <a class="fancybox" rel="firstProposal" title="Varying color intensity for good and bad values" href="img/pvalue_chart/10.png"><img class="gallery1center" id="firstProposal_6" src="img/pvalue_chart/10.png" alt="" /></a>
                 </div>
 
                 <p>After presenting the concept to the product team, I got the green light to go ahead and implement it in the product.</p>
@@ -204,15 +204,15 @@
                 <p>His first proposal was a reversed box plot that conveyed where most of the values sit inside the interval.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="finalProposal" title="BLA BLA" href="img/pvalue_chart/stuarts_proposal1.png"><img class="gallery2" id="stuart1" src="img/pvalue_chart/stuarts_proposal1.png" alt="" /></a>
-                    <a class="fancybox" rel="finalProposal" title="BLA BLA" href="img/pvalue_chart/stuarts_proposal2.png"><img class="gallery2" id="stuart2" src="img/pvalue_chart/stuarts_proposal2.png" alt="" /></a>
+                    <a class="fancybox" rel="finalProposal" title="Box plot definition" href="img/pvalue_chart/stuarts_proposal1.png"><img class="gallery2" id="stuart1" src="img/pvalue_chart/stuarts_proposal1.png" alt="" /></a>
+                    <a class="fancybox" rel="finalProposal" title="Revers box plots used for p value intervals" href="img/pvalue_chart/stuarts_proposal2.png"><img class="gallery2" id="stuart2" src="img/pvalue_chart/stuarts_proposal2.png" alt="" /></a>
                 </div>
 
                 <p>An even better set of mockups followed, a version where the box plot was replaced by individual values.
                     This is better because it allows answering more specific distribution questions and is easier to understand since there is no convention to remember.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="finalProposal" title="BLA BLA" href="img/pvalue_chart/stuarts_proposal3.png"><img class="gallery1center" id="stuart3" src="img/pvalue_chart/stuarts_proposal3.png" alt="" /></a>
+                    <a class="fancybox" rel="finalProposal" title="Replacing the boxes with dots" href="img/pvalue_chart/stuarts_proposal3.png"><img class="gallery1center" id="stuart3" src="img/pvalue_chart/stuarts_proposal3.png" alt="" /></a>
                 </div>
 
                 <p>Even though moving the scale at the bottom had great benefits, there was also a downside to it.
@@ -221,7 +221,7 @@
                     by either reverting some of the scale redundancy or by showing a vertical line next to the mouse cursor.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="finalProposal" title="BLA BLA" href="img/pvalue_chart/stuarts_proposal4.png"><img class="gallery1center" id="stuart4" src="img/pvalue_chart/stuarts_proposal4.png" alt="" /></a>
+                    <a class="fancybox" rel="finalProposal" title="Solutions to aid the correlation between the scale and the values" href="img/pvalue_chart/stuarts_proposal4.png"><img class="gallery1center" id="stuart4" src="img/pvalue_chart/stuarts_proposal4.png" alt="" /></a>
                 </div>
 
                 <p>We decided to go for the interactive line next to the cursor.</p>
@@ -233,7 +233,7 @@
                     the visualization shows off the chart values to convey that there are more values to the right.</p>
 
                 <div class="gallery">
-                    <a class="fancybox" rel="release" title="BLA BLA" href="img/pvalue_chart/final.png"><img class="gallery1" id="final" src="img/pvalue_chart/final.png" alt="" /></a>
+                    <a class="fancybox" rel="release" title="Version that got released" href="img/pvalue_chart/final.png"><img class="gallery1" id="final" src="img/pvalue_chart/final.png" alt="" /></a>
                 </div>
 
                 <h2>CONCLUSION</h2>
