added animated gif to the path tracer article

--- a/network_highlight.html
+++ b/network_highlight.html
@@ -129,6 +129,13 @@
 					<a class="fancybox" rel="result" title="Selection view, after changes" href="img/network_highlight/after_highlight.png"><img class="gallery3" id="result_3" src="img/network_highlight/after_highlight.png" alt=""/></a>
 				</div>
 
+				<div>There was another option that was considered in the beginning, but it did not make it into the product because the changes in transparency were too subtle.
+					This is how it looked like to highlight several levels in the neighbourhood of the selection:</div>
+
+				<div class="gallery">
+					<a class="fancybox" rel="result" title="Multiple level highlight" href="img/network_highlight/path-tracer.gif"><img class="gallery1center" style="width:60%;" id="result_4" src="img/network_highlight/path-tracer.gif" alt=""/></a>
+				</div>
+
                 <p>Unfortunately, I did not hear any feedback from the application users, but the feedback I got from the product team and beta testers was great.</p>
 
                 <h2>CONCLUSIONS</h2>
