--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="style/resets.css"/>
-		<link rel="stylesheet" href="style/customgrid.css"/>	
+		<link rel="stylesheet" href="style/customgrid.css"/>
 		<link rel="stylesheet" href="style/layout.css"/>
 		<link rel="stylesheet" href="style/index.css"/>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
@@ -38,7 +38,7 @@
         <div id="right_panel">
 			<div id="about">
 				<div>Hello, <br><br>
-					I am a Java UI developer and part time UX designer, looking to get more involved in the beautiful field of User Experience
+					I am a Java developer and UX designer, looking to get more involved in the beautiful field of User Experience
 					Design.
 				</div>
 				<div>I currently live in <a href="http://en.wikipedia.org/wiki/Cluj-Napoca" target="-blank">Cluj
