data visualization course added to education page

--- a/education.html
+++ b/education.html
@@ -94,6 +94,24 @@
 			<div id="schools_panel">	
 				<h1>formal education</h1>
 				<div id="schools">
+
+					<div class="school">
+						<div class="circle"></div>
+						<div class="timeframe">
+							<div class="institution">Coursera</div>
+							<div class="time">Aug 2015</div>
+						</div>
+						<div class="details">
+							<div class="title">
+								<span class="title"><a href="https://www.coursera.org/course/datavisualization" target="_blank">Data Visualization</a></span>
+								<span class="degree">online class</span>
+							</div>
+							<div class="description">
+								Intense class that teaches the basics of data visualization, from human perception, representing quantitative, hierarchical and relationship data to visualizing large amounts of data of any kind.
+								</br>This was a great learning experience that spread across four weeks and culminated by obtaining a <a href="https://www.coursera.org/account/accomplishments/records/LMzV7Z2w3pEb8RtQ" target="_blank">certificate</a> from the
+								<a href="http://illinois.edu/about/index.html"  target="_blank">University of Illinois at Urbana-Champaign</a>.</div>
+						</div>
+					</div>
 					
 					<div class="school">
 						<div class="circle"></div>
